migrating to jetty 12